--- a/css/body.css
+++ b/css/body.css
@@ -368,20 +368,102 @@ hr {
 
 /* slider__css */
 
+#timeline-project {
+  position: relative;
+  padding-top: 50px;
+}
+
+#timeline-project:before {
+  content: "";
+  background-image: url("../image/winding-arrow-blue.webp");
+  position: absolute;
+  top: 10%;
+  left: -10%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 38px;
+}
+
+#timeline-project::after {
+  content: "";
+  background-image: url("../image/timelineBg.png");
+  position: absolute;
+  bottom: 20%;
+  right: 0%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 450px;
+  height: 450px;
+  z-index: 0;
+  opacity: 0.1;
+}
+
+.timeline-list{
+  position: relative;
+  max-height: 550px;
+  overflow-y: scroll;
+}
+
 .timeline {
   padding: 30px 20px;
-  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
+  display: flex;
+  gap: 20px;
+  /* grid-template-columns: 1fr 1fr; */
 }
 .timeline ul {
   list-style-type: none;
   border-left: 2px solid #094a68;
   padding: 10px 5px;
+  flex: 1;
 }
+
+.timeline-image {
+  width: 100%;
+  height: 50%;
+}
+
+.timeline-content {
+  flex: 1;
+  transition: transform 0.5s ease-in-out;
+  max-height: 550px;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+  background-color: #fff;
+}
+
+.timeline-content a {
+  display: block;
+  margin-bottom: 10px;
+}
+
 .timeline ul li {
   padding: 20px 20px;
   position: relative;
   transition: 0.5s;
+  margin: 10px 0;
 }
+
+.timeline ul li p {
+  color: #265bc5;
+}
+
+.timeline ul li:hover p {
+  color: #fff;
+}
+
+.timeline ul li i {
+  margin-left: 20px;
+  color: #265bc5;
+}
+
+.timeline ul li:hover i {
+  color: #fff;
+}
+
 .timeline ul li span {
   display: inline-block;
   background-color: #265bc5;
@@ -391,15 +473,23 @@ hr {
   text-align: center;
   color: #fff;
 }
+
+.timeline ul li:hover span {
+  background-color: #fff;
+  color: #265bc5;
+}
+
 .timeline ul li .content h3 {
   color: #34ace0;
   font-size: 17px;
   padding-top: 5px;
 }
+
 .timeline ul li .content p {
   padding: 5px 0px 15px 0px;
   font-size: 15px;
 }
+
 .timeline ul li:before {
   position: absolute;
   content: "";
@@ -411,14 +501,20 @@ hr {
   top: 28px;
   transition: 0.5s;
 }
-.timeline ul li:hover {
-    background-color: #265bc5;
 
+.timeline ul li:hover {
+  background-color: #265bc5;
 }
+
+.timeline ul li:hover h3 {
+  color: #fff;
+}
+
 .timeline ul li:hover:before {
   background-color: #ee1f23;
   box-shadow: 0px 0px 10px 2px #ee1f23;
 }
+
 @media (max-width: 300px) {
   .timeline {
     width: 100%;
