--- a/css/responsive.css
+++ b/css/responsive.css
@@ -36,7 +36,14 @@
     position: absolute;
     right: 0;
     top: 0;
-    
+    width: 80%;
+    background-color: #265bc5;
+    height: 80%;
+  }
+
+  .ourTeam_footer_text,
+  .ourTeam_footer_text2 {
+    font-size: 4rem;
   }
 }
 
@@ -80,6 +87,11 @@
 
   .header__logo__item {
     right: 5%;
+  }
+
+  .ourTeam_footer_text,
+  .ourTeam_footer_text2 {
+    font-size: 5rem;
   }
 }
 
@@ -293,6 +305,16 @@
 
   .vector__item {
     display: none;
+  }
+
+  .ourTeam_footer_text,
+  .ourTeam_footer_text2 {
+    font-size: 3rem;
+  }
+
+  .slide-caption-library {
+    font-size: 1rem;
+    bottom: 15px
   }
 
 }
