--- a/css/body.css
+++ b/css/body.css
@@ -129,19 +129,19 @@ button.next-library {
 
 /* --------------------about us ----------------*/
 .about-me {
-  height: 650px;
   position: relative;
-  transition: 10s;
 }
 
 .about-me__content {
   display: flex;
   justify-content: space-between;
   padding: 50px 0px;
+  gap: 20px;
+  display: flex;
 }
 
 .about-me__left {
-  width: 43%;
+  flex: 1;
   position: relative;
   overflow: hidden;
 }
@@ -190,7 +190,7 @@ button.next-library {
 }
 
 .about-me__right {
-  width: 48%;
+  flex: 1;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -242,7 +242,7 @@ button.next-library {
 /* ------------------skills------------- */
 
 .skills {
-  height: 786px;
+  padding: 20px 0;
   background-image: url("../image/banner__services.png");
   background-size: cover;
   display: flex;
@@ -251,17 +251,14 @@ button.next-library {
 }
 
 #skills-content {
-  width: 100%;
-  height: 600px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .skills-items {
-  width: 50%;
-  height: 50%;
   background: #fff;
-  transition: 1s;
+  box-sizing: border-box;
+  flex: 0 0 50%;
 }
 
 .skills-items:hover {
@@ -270,19 +267,14 @@ button.next-library {
 }
 
 .skills-items:hover h4,
-.skills-items:hover li {
-  color: #fff;
-  transition: 1s;
-}
-
-.skills-items:hover i {
+.skills-items:hover li,
+.skills-items:hover i,
+.skills-items:hover p {
   color: #fff;
   transition: 1s;
 }
 
 .items__top {
-  width: 100%;
-  height: 50%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -309,47 +301,6 @@ button.next-library {
 
 /* --------------user---------------- */
 
-.user {
-  background-image: url("../image/banner__user.png");
-  background-size: cover;
-  text-align: center;
-  padding-top: 100px;
-  position: relative;
-  padding-bottom: 50px;
-}
-
-.user__top a {
-  color: #ee1f23;
-  text-decoration: none;
-  display: inline-block;
-  margin-bottom: 10px;
-  letter-spacing: 0.2cm;
-}
-
-.user__top h2 {
-  font-weight: bold;
-}
-
-.user__content {
-  margin-top: 20px;
-  padding-left: 150px;
-  padding-right: 75px;
-  height: 350px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.user__picture {
-  width: 32%;
-  position: relative;
-}
-
-.user__picture img {
-  width: 100%;
-  height: 100%;
-}
-
 .picture__item {
   width: 80%;
   height: 25%;
@@ -368,37 +319,10 @@ button.next-library {
   align-items: flex-start;
   flex-direction: row;
 }
-
-.user__item {
-  width: 60%;
-  height: 95%;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-}
-
-.user__text {
-  position: relative;
-  width: 89%;
-  height: 100%;
-  text-align: left;
-}
-
-.user__logo {
-  width: 100%;
-  height: 100px;
-  background-color: #fff;
-  position: absolute;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-}
 /* --------Contact------------- */
 
 .contact {
-  height: 175px;
+  padding: 20px 0;
   background-image: url("../image/banner__services.png");
   position: relative;
   display: flex;
@@ -409,10 +333,12 @@ button.next-library {
   content: "";
   background-color: #265bc5;
   opacity: 0.8;
-  height: 175px;
+  height: 100%;
   width: 100%;
   position: absolute;
   z-index: 0;
+  top: 0;
+  left: 0;
 }
 
 .contact__content {
@@ -420,6 +346,7 @@ button.next-library {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 5px;
 }
 
 .contact__item i {
@@ -429,6 +356,7 @@ button.next-library {
 }
 
 .contact__item {
+  flex: 0 0 25%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -466,6 +394,20 @@ button.next-library {
   height: 38px;
 }
 
+.arrow-red {
+  background-image: url("../image/winding-arrow-red.webp");
+  position: absolute;
+  bottom: 10%;
+  right: 0%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 38px;
+  z-index: -1;
+  opacity: 0.5;
+}
+
 #timeline-project::after {
   content: "";
   background-image: url("../image/timelineBg.png");
@@ -477,7 +419,7 @@ button.next-library {
   background-repeat: no-repeat;
   width: 450px;
   height: 450px;
-  z-index: 0;
+  z-index: -1;
   opacity: 0.1;
 }
 
@@ -491,7 +433,8 @@ button.next-library {
   padding: 30px 20px;
   display: flex;
   gap: 20px;
-  /* grid-template-columns: 1fr 1fr; */
+  border: 1px solid #34ace0;
+  border-radius: 30px;
 }
 .timeline ul {
   list-style-type: none;
@@ -503,6 +446,7 @@ button.next-library {
 .timeline-image {
   width: 100%;
   height: 50%;
+  object-fit: contain;
 }
 
 .timeline-content {
