--- a/css/header.css
+++ b/css/header.css
@@ -84,7 +84,7 @@
 .header__banner {
   background-image: url("../image/banner__header.png");
   background-repeat: no-repeat;
-  height: 786px;
+  height: 80vh;
   padding-top: 40px;
   position: relative;
 }
@@ -126,10 +126,15 @@
   position: absolute;
 }
 
+.menu__main {
+  display: flex;
+  gap: 30px;
+  margin-top: 150px;
+}
+
 .header__title {
-  margin-top: 117.5px;
-  width: 61%;
   color: #fff;
+  flex: 3;
 }
 
 .header__title h1 {
@@ -138,51 +143,18 @@
   font-weight: bold;
 }
 
-.header__title__button {
-  display: flex;
-}
-
-.header__title__button a {
-  background-color: #ee1f23;
-  padding: 14px 51px;
-  color: #fff;
-  text-decoration: none;
-  transition: 1s;
-  font-weight: bolder;
-}
-
-.header__title__button button {
-  outline: none;
-  border: none;
-}
-
 .header__title__button a:hover {
   color: #ee1f23;
   background-color: #fff;
   transition: 1s;
 }
 
-.header__title p {
-  margin-bottom: 51px;
-  margin-right: 118px;
-}
-
-.header__title i {
-  background-color: #fff;
-  margin-left: 1px;
-  padding-left: 12.5px;
-  padding-right: 15px;
-  padding-top: 17px;
-  padding-bottom: 16px;
-}
-
 .logo__social__network {
-  position: absolute;
-  bottom: 30%;
-  right: 15%;
   font-size: 25.5px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  flex: 1;
 }
 
 .logo__social__network a {
