--- a/css/footer.css
+++ b/css/footer.css
@@ -17,8 +17,8 @@
   overflow: hidden;
   position: relative;
   padding: 100px 0;
-  /* border-top: 1px solid #000; */
-  /* border-bottom: 1px solid #000; */
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
 }
 
 .ourTeam_footer_text,
