--- a/css/header.css
+++ b/css/header.css
@@ -94,8 +94,6 @@
   border-bottom: 0.5px solid #fff;
   display: flex;
   justify-content: center;
-  padding-left: 30%;
-  padding-right: 30%;
   padding-top: 1%;
 }
 
@@ -112,7 +110,7 @@
 .menu__items a {
   text-decoration: none;
   font-family: "Montserrat", sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
   color: #fff;
   position: relative;
 }
