--- a/css/footer.css
+++ b/css/footer.css
@@ -16,7 +16,7 @@
 .ourTeam_footer {
   overflow: hidden;
   position: relative;
-  padding: 100px 0;
+  padding: 10% 0;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 }
