--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,38 @@
   box-sizing: border-box;
 }
 
+:root {
+  font-size: 16px;
+
+  --font-size-large: 1.125rem;
+  --font-size-medium: 1rem;
+  --font-size-small: 0.875rem;
+}
+
+body {
+  font-size: var(--font-size-large);
+}
+
+@media (max-width: 1024px) {
+  :root {
+    font-size: 15px;
+  }
+
+  body {
+    font-size: var(--font-size-medium);
+  }
+}
+
+@media (max-width: 768px) {
+  :root {
+    font-size: 14px;
+  }
+
+  body {
+    font-size: var(--font-size-small);
+  }
+}
+
 .hidden {
   visibility: hidden;
   transition: transform 0.5s ease-in-out;
@@ -23,8 +55,8 @@
   padding: 5px 10px;
   border: none;
   outline: none;
-  transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-
+  transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out,
+    color 0.2s ease-in-out;
 }
 
 .buttonCustom:hover {
@@ -36,4 +68,14 @@
 
 a {
   text-decoration: none;
+}
+
+.titleSection {
+  font-size: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .titleSection {
+    font-size: 1rem;
+  }
 }
